manifests/instances/core/templates/data-science-project/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ds-pipeline-creation-from-cicd
  namespace: 'mnist'
spec:
  podSelector:
    matchLabels:
      app: ds-pipeline-dspa
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ci-cd
      ports:
        - protocol: TCP
          port: 8888
